--- a/web/app/global.css
+++ b/web/app/global.css
@@ -1,3 +1,21 @@
 @import 'tailwindcss';
 @import 'fumadocs-ui/css/neutral.css';
 @import 'fumadocs-ui/css/preset.css';
+
+@theme {
+  --color-text: rgb(23, 23, 23);
+  --color-background: rgb(245, 245, 245);
+  --color-primary: rgb(200, 60, 60);
+  --color-secondary: rgb(231, 129, 129);
+  --color-accent: rgb(236, 82, 82);
+}
+
+@media (prefers-color-scheme: dark) {
+  @theme {
+    --color-text: rgb(232, 232, 232);
+    --color-background: rgb(10, 10, 10);
+    --color-primary: rgb(195, 55, 55);
+    --color-secondary: rgb(124, 24, 24);
+    --color-accent: rgb(174, 19, 19);
+  }
+}
